# msgtrans-rust

./: CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_TODO.md  LICENSE  PHASE_1_RESULTS.md  README.md  README.zh-CN.md  REFACTOR_PROGRESS.md  SEPARATED_BUILDER_IMPLEMENTATION.md  TRANSPORT_CLIENT_EXAMPLES.md  UNIFIED_ARCHITECTURE_REDESIGN.md  fix_errors.sh  quic_fix.patch  server_logs.txt  server_logs_fixed.txt
benches/: channel_comparison.rs  lockfree_benchmarks.rs  modern_transport_benchmarks.rs  packet_parsing_benchmarks.rs  phase2_benchmarks.rs  phase2_validation.rs  slab_comparison.rs
benchmarks/: README.md  internal_protocols.rs
certs/: cert.pem  key.pem
docs/: ARCHITECTURE_DESIGN_PHILOSOPHY.md  ARCHITECTURE_DESIGN_PHILOSOPHY.zh-CN.md  PHASE2_LOCKFREE_ACHIEVEMENT.md  PHASE2_PERFORMANCE_OPTIMIZATION.md  PHASE3_ARCHITECTURE_SIMPLIFICATION.md  PHASE3_REFACTOR_COMPLETION.md  PRACTICAL_USAGE_GUIDE.md  README.md  REFACTOR_SUCCESS_SUMMARY.md  TRANSPORT_ARCHITECTURE_REFACTOR.md  ULTIMATE_API_SIMPLIFICATION.md  architecture-v2.md  architecture_decision.md  flume_analysis.md  lockfree_migration_plan.md  phase_2_migration_summary.md  phase_3_migration_plan.md  technical_comparison.md  transport-redesign.md
examples/: actor_channel_optimization.rs  architecture_showcase.rs  basic_test.rs  client_quic.rs  client_tcp.rs  client_websocket.rs  compression.rs  concurrent_lockfree_test.rs  connection_info_test.rs  debug_client.rs  debug_events.rs  debug_events_fixed.rs  debug_lockfree.rs  debug_msgtrans_communication.rs  debug_quic_events.rs  debug_tcp_communication.rs  debug_transport_events.rs  echo_client.rs  echo_client_quic.rs  echo_client_quic_simple.rs  echo_client_tcp.rs  echo_client_tcp_new.rs  echo_client_websocket.rs  echo_mode_a.rs  echo_mode_b.rs  echo_server.rs  echo_server_debug.rs  echo_server_fixed.rs  echo_server_new.rs  echo_server_new_api.rs  echo_server_simple.rs  echo_with_events_fixed.rs  event_driven_tcp_test.rs  expert_config_demo.rs  final_architecture_summary.rs  final_showcase.rs  flume_comparison.rs  high_performance_default_demo.rs  hybrid_architecture_demo.rs  improved_api_showcase.rs  (+49 more)
src/: actor.rs  callbacks.rs  command.rs  compression.rs  config.rs  connection.rs  context.rs  discovery.rs  error.rs  event.rs  lib.rs  new_client.rs  packet.rs  plugin.rs  stream.rs
src/adapters/: factories.rs  mod.rs  quic.rs  tcp.rs  websocket.rs
src/channel/: client_channel.rs  mod.rs  quic_client_channel.rs  quic_server_channel.rs  server_channel.rs  tcp_client_channel.rs  tcp_server_channel.rs  websocket_client_channel.rs  websocket_server_channel.rs
src/client/: message_transport_client.rs  mod.rs
src/protocol/: adapter.rs  client_config.rs  mod.rs  protocol.rs  protocol_adapter.rs  server_config.rs
src/server/: message_transport_server.rs  mod.rs
src/session/: mod.rs  quic_transport_session.rs  tcp_transport_session.rs  transport_session.rs  websocket_transport_session.rs
src/transport/: actor.rs  actor_v2.rs  api.rs  client.rs  config.rs  connection_factory.rs  connection_state.rs  core.rs  expert_config.rs  lockfree.rs  lockfree_connection.rs  lockfree_enhanced.rs  memory_pool.rs  memory_pool_v2.rs  mod.rs  pool.rs  protocol_adapter.rs  protocol_adapter_v2.rs  quic.rs  quic_simple.rs  request_manager.rs  server.rs  tcp.rs  transport.rs  transport_server.rs  websocket.rs
src/unified/: actor.rs  adapter.rs  api.rs  command.rs  config.rs  error.rs  event.rs  mod.rs  packet.rs  protocol.rs  protocol_adapter.rs  stream.rs
src/unified/adapters/: factories.rs  mod.rs  quic.rs  tcp.rs  websocket.rs
tests/: stress_test_phase2.rs
