[package]
name = "msgtrans"
version = "0.1.6"
edition = "2021"
authors = ["zoujiaqing <zoujiaqing@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/zoujiaqing/msgtrans-rust"
categories = ["asynchronous", "network-programming"]
keywords = ["tcp", "quic", "websocket", "tokio"]
description = "Support for a variety of communication protocols such as TCP / QUIC / WebSocket, easy to create server and client network library."

[features]
default = ["tcp", "websocket"]
tcp = []
websocket = ["tokio-tungstenite"]
quic = ["quinn", "rustls", "rcgen"]
compression = ["flate2", "zstd"]

[dependencies]
# Core dependencies
tokio = { version = "1.32", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
futures = "0.3.28"
async-trait = "0.1.64"
bytes = "1.4.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
url = "2.4.0"

# Protocol-specific dependencies
tokio-tungstenite = { version = "0.19", optional = true }
quinn = { version = "0.11", optional = true }
rustls = { version = "0.23.5", default-features = false, features = ["ring", "std"], optional = true }
rcgen = { version = "0.13", optional = true }

# Optional compression support
flate2 = { version = "1", optional = true }
zstd = { version = "0.13", optional = true }

[dev-dependencies]
tracing-subscriber = "0.3"
toml = "0.8"