[package]
name = "msgtrans"
version = "0.1.6"
edition = "2021"
authors = ["zoujiaqing <zoujiaqing@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/zoujiaqing/msgtrans-rust"
categories = ["asynchronous", "network-programming"]
keywords = ["tcp", "quic", "websocket", "tokio"]
description = "Support for a variety of communication protocols such as TCP / QUIC / WebSocket, easy to create server and client network library."

[features]
default = ["tcp", "websocket", "quic"]
tcp = []
websocket = []
quic = []

[dependencies]
# Core dependencies
tokio = { version = "1.40", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
futures = "0.3.28"
async-trait = "0.1"
bytes = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
url = "2.4.0"

# Protocol-specific dependencies
tokio-tungstenite = "0.24"
quinn = "0.11"
rustls = "0.23"
rcgen = "0.13"

# Optional compression support
flate2 = { version = "1", optional = true }
zstd = { version = "0.13", optional = true }

[dev-dependencies]
tracing-subscriber = "0.3"
toml = "0.8"

[[example]]
name = "echo_server"
path = "examples/echo_server.rs"

[[example]]
name = "echo_client_tcp"
path = "examples/echo_client_tcp.rs"

[[example]]
name = "echo_client_websocket"
path = "examples/echo_client_websocket.rs"

[[example]]
name = "echo_client_quic"
path = "examples/echo_client_quic.rs"

[[example]]
name = "packet"
path = "examples/packet.rs"