[package]
name = "msgtrans"
version = "0.1.6"
edition = "2021"
authors = ["zoujiaqing <zoujiaqing@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/zoujiaqing/msgtrans-rust"
categories = ["asynchronous", "network-programming"]
keywords = ["tcp", "quic", "websocket", "tokio"]
description = "Support for a variety of communication protocols such as TCP / QUIC / WebSocket, easy to create server and client network library."

[features]
default = ["tcp", "websocket", "quic"]
tcp = []
websocket = []
quic = []

[dependencies]
# Core dependencies
tokio = { version = "1.40", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"
futures-util = "0.3"
futures = "0.3.28"
async-trait = "0.1"
bytes = "1.0"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
url = "2.4.0"

# Lock-free data structures
crossbeam = "0.8"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
parking_lot = "0.12"
slab = "0.4"
sharded-slab = "0.1"

# Protocol-specific dependencies
tokio-tungstenite = "0.24"
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2.0"
rcgen = "0.13"

# Optional compression support
flate2 = { version = "1", optional = true }
zstd = { version = "0.13", optional = true }

[dev-dependencies]
tracing-subscriber = "0.3"
toml = "0.8"
# Benchmark dependencies
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
# Phase 2 testing dependencies
rand = "0.8"

[[example]]
name = "packet"
path = "examples/packet.rs"

# Phase 2 benchmarks
[[bench]]
name = "phase2_benchmarks"
harness = false
path = "benches/phase2_benchmarks.rs"

# Modern transport benchmarks
[[bench]]
name = "modern_transport_benchmarks"
harness = false
path = "benches/modern_transport_benchmarks.rs"
